# mcp-probe-cli

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/mcp_probe/: __init__.py  __main__.py  checks.py  report.py  runner.py  transport.py
tests/: minimal_server.py  test_checks.py  test_runner_integration.py
