[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-probe"
version = "0.1.0"
description = "MCP server conformance tester — zero external dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "castrocrest", email = "castrocrest@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "conformance", "testing", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.scripts]
mcp-probe = "mcp_probe.__main__:main"

[project.urls]
Homepage = "https://github.com/castrocrest/mcp-probe"
Issues = "https://github.com/castrocrest/mcp-probe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_probe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
